[gd_scene load_steps=12 format=3 uid="uid://c8codwb0jmyiu"]

[ext_resource type="Script" path="res://enemies/purple/purple.gd" id="1_p8b53"]
[ext_resource type="AudioStream" uid="uid://e7g5lfly8s3g" path="res://audio/bulletsfx.wav" id="2_hyedg"]

[sub_resource type="Curve" id="Curve_kso2c"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.5, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3
metadata/_snap_enabled = true

[sub_resource type="Gradient" id="Gradient_wvx04"]
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0)
metadata/_snap_count = 20
metadata/_snap_enabled = true

[sub_resource type="Curve" id="Curve_73jtp"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.5, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3
metadata/_snap_enabled = true

[sub_resource type="Curve" id="Curve_yayy4"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.5, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3
metadata/_snap_enabled = true

[sub_resource type="CircleShape2D" id="CircleShape2D_wxq5g"]
radius = 26.0069

[sub_resource type="CircleShape2D" id="CircleShape2D_xg16w"]
radius = 130.0

[sub_resource type="CircleShape2D" id="CircleShape2D_voi8f"]
radius = 130.062

[sub_resource type="Curve" id="Curve_sjx32"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.5, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3
metadata/_snap_enabled = true

[sub_resource type="Gradient" id="Gradient_nl4b1"]
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0)

[node name="purple" type="CharacterBody2D"]
collision_layer = 16
collision_mask = 16
script = ExtResource("1_p8b53")

[node name="body" type="CPUParticles2D" parent="."]
scale = Vector2(5, 5)
amount = 200
emission_shape = 1
emission_sphere_radius = 32.5
spread = 180.0
gravity = Vector2(0, 0)
angular_velocity_min = -180.0
angular_velocity_max = 180.0
angle_min = -360.0
angle_max = 360.0
scale_amount_min = 50.0
scale_amount_max = 50.0
scale_amount_curve = SubResource("Curve_kso2c")
color = Color(0.372549, 0, 1, 1)
color_ramp = SubResource("Gradient_wvx04")

[node name="eye_top" type="CPUParticles2D" parent="."]
position = Vector2(0, -40)
amount = 20
lifetime = 0.4
speed_scale = 0.5
direction = Vector2(0, -1)
spread = 0.0
gravity = Vector2(0, 0)
initial_velocity_min = 250.0
initial_velocity_max = 250.0
angular_velocity_min = -180.0
angular_velocity_max = 180.0
angle_min = -180.0
angle_max = 180.0
scale_amount_min = 30.0
scale_amount_max = 30.0
scale_amount_curve = SubResource("Curve_73jtp")

[node name="eye_bottom" type="CPUParticles2D" parent="."]
position = Vector2(0, 40)
amount = 20
lifetime = 0.4
speed_scale = 0.5
direction = Vector2(0, 1)
spread = 0.0
gravity = Vector2(0, 0)
initial_velocity_min = 250.0
initial_velocity_max = 250.0
angular_velocity_min = -180.0
angular_velocity_max = 180.0
angle_min = -180.0
angle_max = 180.0
scale_amount_min = 30.0
scale_amount_max = 30.0
scale_amount_curve = SubResource("Curve_yayy4")

[node name="eye_left" type="CPUParticles2D" parent="."]
position = Vector2(-40, 0)
amount = 20
lifetime = 0.4
speed_scale = 0.5
direction = Vector2(-1, 0)
spread = 0.0
gravity = Vector2(0, 0)
initial_velocity_min = 250.0
initial_velocity_max = 250.0
angular_velocity_min = -180.0
angular_velocity_max = 180.0
angle_min = -180.0
angle_max = 180.0
scale_amount_min = 30.0
scale_amount_max = 30.0
scale_amount_curve = SubResource("Curve_yayy4")

[node name="eye_right" type="CPUParticles2D" parent="."]
position = Vector2(40, 0)
amount = 20
lifetime = 0.4
speed_scale = 0.5
spread = 0.0
gravity = Vector2(0, 0)
initial_velocity_min = 250.0
initial_velocity_max = 250.0
angular_velocity_min = -180.0
angular_velocity_max = 180.0
angle_min = -180.0
angle_max = 180.0
scale_amount_min = 30.0
scale_amount_max = 30.0
scale_amount_curve = SubResource("Curve_73jtp")

[node name="playerdeath" type="Area2D" parent="." groups=["enemy", "enemy_body"]]
scale = Vector2(5, 5)

[node name="CollisionShape2D" type="CollisionShape2D" parent="playerdeath"]
shape = SubResource("CircleShape2D_wxq5g")

[node name="hurts_player" type="Area2D" parent="." groups=["enemy_attack", "parryable"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="hurts_player"]
shape = SubResource("CircleShape2D_xg16w")

[node name="wall_hitbox" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("CircleShape2D_voi8f")

[node name="Stunned" type="Timer" parent="."]

[node name="spawn" type="CPUParticles2D" parent="."]
emitting = false
amount = 100
lifetime = 0.5
one_shot = true
explosiveness = 1.0
emission_shape = 1
emission_sphere_radius = 30.0
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_min = 600.0
initial_velocity_max = 600.0
angular_velocity_min = -180.0
angular_velocity_max = 180.0
angle_min = -180.0
angle_max = 180.0
scale_amount_min = 30.0
scale_amount_max = 30.0
scale_amount_curve = SubResource("Curve_sjx32")
color = Color(0.372549, 0, 1, 1)
color_ramp = SubResource("Gradient_nl4b1")

[node name="spawnsfx" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_hyedg")
volume_db = -13.0
pitch_scale = 3.0
autoplay = true
max_distance = 1000.0

[connection signal="area_entered" from="playerdeath" to="." method="_on_playerdeath_area_entered"]
[connection signal="timeout" from="Stunned" to="." method="_on_stunned_timeout"]
